--- a/src/components/Labels.css
+++ b/src/components/Labels.css
@@ -10,22 +10,19 @@
     border-left: 15px solid black;
 }
 .arrow-left {
-border-right: 15px solid black; 
+    border-right: 15px solid black; 
 }
 
 .label-navigation {
     width: calc(100vw - 0px);
-    background: radial-gradient(circle farthest-side, lightgray, rgb(128, 128, 128, .8));
+    background: radial-gradient(circle farthest-side, rgb(211, 211, 211), rgb(128, 128, 128, .8));
     height: 60px;
 }
 .label-navigation select {
-    /* display: inline-block; */
-    /* height: 60px; */
     font-size: 30px;
-    /* padding: 6px 0 0 0; */
 }
 .label-navigation div:first-of-type {
-    width: calc(100vw - 101px);
+    width: calc(100vw - 100px);
     text-align: left;
     float: left;
 }
@@ -49,8 +46,7 @@ border-right: 15px solid black;
     background-color: transparent;
     border: 2px solid black; 
     height: 56px;
-    width: 56px;
-    /* margin: -2px; */
+    width: 61px;
 }
 .selector .green {
     background-color: green;
@@ -101,9 +97,8 @@ border-right: 15px solid black;
     position: absolute;
 }
 
-.label-tools-container, .label-tools-container > section, .search-samples, .upload-images {
-    width: 10vw;
-    min-width: 40px;
+.label-tools-container, .label-tools-container > section > input {
+    width: 40px;
     height: 60px;
 }
 
@@ -118,8 +113,6 @@ border-right: 15px solid black;
 
 }
 .label-tools-container > section {
-    /* min-width: 40px;
-    height: 60px; */
     overflow: hidden;
     display: block;
     margin: 8px 0 0 0;
@@ -127,19 +120,17 @@ border-right: 15px solid black;
     bottom: 0;
     position: relative;
 }
-.label-tools-container > section .search-samples {
-    /* min-width: 40px;
-    height: 60px; */
-    background-image: url(../img/image-search-icon.png);
+
+.search-samples, .upload-images {
     background-size: contain;
     background-repeat: no-repeat;
 }
+.label-tools-container > section .search-samples {
+    background-image: url(../img/image-search-icon.png);
+
+}
 .label-tools-container > section .upload-images {
-    /* min-width: 40px;
-    height: 60px; */
     background-image: url(../img/image-upload-icon.png);
-    background-size: contain;
-    background-repeat: no-repeat;
 }
 
 
@@ -149,14 +140,22 @@ border-right: 15px solid black;
     overflow: hidden;
     display: block;
 }
+@media screen and (min-width: 340px){
+    .label-key-container {
+        transform: scale(1.5);
+        margin: 20px 0 0 5px;
+    }
+    .label-tools-container, .label-tools-container > section > input {
+        width: 50px;
+        height: 60px;
+    }
+}
 
 .label-key-container {
     width: 40px;
     height: 60px;
     overflow: hidden;
     display: block;
-    /* margin: 0 0 0 0px; */
-    margin: 0 0 0 20px;
     border: 1px solid black;
     position: relative;
     float: right;
@@ -164,14 +163,14 @@ border-right: 15px solid black;
 .label-key-container > div {
     height: 60px;
     width: 40px;
-    /* width: 42px; */
 }
 .label-maker-container {
     display: inline-block;
     max-width: 280px;
 }
+
 .label-maker-canvas {
-    width: 320px;
+    width: 340px;
     margin: 0 auto;
 }
 .color-box-container h5 {
@@ -189,15 +188,14 @@ width: 100vw;
     position: relative;
 }
 .color-box > div {
-    min-width: 840px;
+    min-width: 910px;
     position: relative;
     max-height: 60px;
     overflow: hidden;
-    /* left: 0; */
 }
 .box {
     height: 60px;
-    width: 60px;
+    width: 65px;
     display: inline-block;
 }
 .none {
